# github_sample_c_code2

./: README.md  tags
_c_sample/: README.md  common_embed_c_code.c
_c_sample/__attribute__((cleanup(my_free)))特性_devcpp工程/: Makefile.win  main.c
_c_sample/_coredump_sample/: 1.md
_c_sample/_coredump_test/: 1.md  test.c  使用说明.md
_c_sample/_devcpp_print_macro_when_compile/: Makefile.win  _print_macro_when_compile_.dev  _print_macro_when_compile_.layout  a.out
_c_sample/_linux_socket/: _readme.md  client.c  server.c
_c_sample/_linux_vscode_32bit_64bit_printf_test/: printf  printf.c
_c_sample/_linux_vscode__print_enum_string_by_enum_value/: _print_enum_string_by_enum_value  _print_enum_string_by_enum_value.c  sharp_test1  sharp_test1.c
_c_sample/_linux_vscode_fd_set/: main  用法.md
_c_sample/_linux_vscode_fread/: fread_read_test1  fread_read_test2
_c_sample/_linux_vscode_hello_world/: _c1_  _c1_.c  在proc下查看进程.txt
_c_sample/_linux_vscode_hello_world_and_analysis_in_procfs/: _c1_  在proc下查看进程.txt
_c_sample/_linux_vscode_ncurses_test_bar-menu/: bar-menu.c
_c_sample/_linux_vscode_on_linux_for_debug_c/: helloworld
_c_sample/_linux_vscode_process_bar/: process_bar  process_bar.c
_c_sample/_makefile_template/: README.txt
_c_sample/_使用inih库解析.ini配置文件/: Makefile  main.c
_c_sample/_变长参数的函数/: 1.c
_c_sample/_编译系统/_meson_hello_world/meson_demo/: meson.build
_c_sample/_编译系统/_meson_hello_world/meson_demo/src/: hello.c  hello.h  main.c
_c_sample/_读写配置文件/: only_read_param.c
_c_sample/linux-cmake-example/: CMakeLists.txt
_c_sample/linux-cmake-example/app/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
_c_sample/linux-cmake-example/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  math_utils.c  string_utils.c
_c_sample/linux-cmake-example/lib/include/: math_utils.h  string_utils.h
_c_sample/linux-cmake-example/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_string_utils.c
_linux_application_sample/Linux下线程间通信（C和D线程）/: _readme.md  thread_ipc  thread_ipc.c
_linux_application_sample/Linux下进程间通信（A和B进程）/: _readme.md  shm_ipc  shm_ipc.c
_linux_application_sample/_socket的client不断发送,server端不断接收的例子/: client  client.c  readme.md  server  server.c
_linux_driver_sample/: README.md  _学习 Linux BSP 开发.md  interrupt.c
_linux_driver_sample/_save_basic_info.sh_打印linux开发板的常用信息到一个文件,方便熟悉开发板/: save_basic_info.sh  save_basic_info_result_100ask的6ull开发板.txt  save_basic_info_result_raspberry_pi_4b.txt
_linux_driver_sample/sample/: note.md  嵌入式linux开发guide.md
_linux_driver_sample/save_basic_info.sh/: 1.txt  save_basic_info.sh  save_basic_info_result_100ask的6ull开发板.md  save_basic_info_result_8397_android.md  save_basic_info_result_8397_android_东风.md  save_basic_info_result_8397_linux_东风.md  save_basic_info_result_qualcomm_8295.md  save_basic_info_result_qualcomm_qsc6125.md  save_basic_info_result_raspberry_pi_4b.md  save_basic_info_result_raspberry_pi_4b_手工补充命令.md  save_basic_info_result_开发板_100ask的6ull_20251214.md  save_basic_info_result_开发板_2021年版本奔跑吧linux.md  save_basic_info_result_开发板_泰山派_android11_带摄像头.md  save_basic_info_result_泰山派.md  save_basic_info_result_泰山派_android11.md  save_basic_info_result_泰山派_android11_带摄像头.md
_non-linux_driver_sample/_源地YD-ESP32-C3-C开发板示例/: readme.md
_non-linux_driver_sample/arduino_Blink_with_BP_debug_on_uno/: Blink_with_BP_debug_on_uno_copy_20240904233700.ino  readme.md
_python_sample/: README.md  _serial_port_recorder_with_timestamp_ 串口终端工具并且打印时间戳.py  android_simulate_keep_press_button_every_random_delay_bv_adb.py  hexdump_to_addr2value_.py  打印运行的系统信息.py
_python_sample/_python_auto_test_phone_and_verify/: _test_AR_camera.py  _test_DMS_camera.py
_python_sample/_python_export_registers_of_IC/: _generate_i2ctransfer_val_bus2_addr_0x29_max96722_m57.bat  _generate_i2ctransfer_val_bus2_addr_0x29_max96722_m57.py
_python_sample/_socket的 client不断发送,server端不断接收的例子/: _client.py  _server.py  note_分析方法.md
_script_sample/: cmd下循环执行某命令_cat-6215cpu-freq.bat  cmd下循环执行某命令_repeat_cmd_do.bat  cmd下循环执行某命令_repeat_cmd_do_m57_temp.bat  system_monitor.sh
_script_sample/_bash/: andriod_build.sh  (+2 more)
_tools/: readme.md
_默认最小工程的模板/: _nsy_note.txt  _nsynote.txt
_默认最小工程的模板/_builder/_nisy_/src/: _nisy_-window.h  meson.build
_默认最小工程的模板/anjuta/_1_anjuta/src/: Makefile.am  Makefile.in  _1_.c  _1_.h  main.c
_默认最小工程的模板/anjuta_gtk_simple/src/: Makefile.am  Makefile.in  main.c
_默认最小工程的模板/anjuta_libfoo/src/: Makefile.am  lib.c  libfoo-0.1.pc.in  libfoo.h
_默认最小工程的模板/anjuta_pure_c/_general1_/src/: Makefile  Makefile.am  Makefile.in  _general1_  main.c
_默认最小工程的模板/anjuta_pure_c/_general1_/src/.deps/: main.Po
_默认最小工程的模板/gnome_builder/gnome_app_nisy/nisy/src/: main.c  meson.build  nisy-window.c  nisy-window.h  nisy-window.ui  nisy.gresource.xml
(+314 files in other folders)
