## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = libfoo.la


libfoo_la_SOURCES = \
	lib.c

libfoo_la_LDFLAGS = 

libfoo_la_LIBADD = 



include_HEADERS = \
	libfoo.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libfoo-0.1.pc

EXTRA_DIST = \
	libfoo-0.1.pc.in
